changes in appsettings.json, now I am able to create the tables, but I still get error when I try to add anything

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LegendsConnection": "Host=localhost;Port=5433;Database=legends;Username=postgres;Password="
+    "LegendsConnection": "Host=localhost;Port=5433;Database=legends;Username=postgres;Password=test123"
   }
 }
