add authentication and authorization

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "JwtSettings": {
+    "Issuer": "https://localhost:7097",
+    "Audience": "https://localhost:7097",
+    "Key": "ForTheLoveOfGodStoreAndLoadThisSecurely"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
