--- a/appsettings.json
+++ b/appsettings.json
@@ -12,6 +12,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "LegendsConnection": "Host=localhost;Port=5432;Database=legends;Username=postgres;Password=Zaq11qaz"
+    "LegendsConnection": "Host=localhost;Port=5432;Database=legends;Username=postgres;Password=2022"
   }
 }
